# WarriorPlug-Ins

./: .gitignore  CMakeLists.txt  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DreamMaker by Titan.txt  LICENSE  Mastering & Mixing.txt  README.md  UI_SHOWCASE_PRESALE.md  VALUATION_ANALYSIS.md  WarriorHeadPhone.txt  WarriorSynth.tsx  WarriorUSB.txt  WarriorVoc.txt  build.sh  cmake_fixes.cmake  package.json  show_plugin_info.sh  warrior_headphone_ui_preview.txt
Bass/: 61 Classic Bass.sfz  Acoustic Bass N.sfz  Acoustic Bass T.sfz
Drums/: Jazz Brushes Kit.sfz  Rock Kit.sfz
Guitar/: 12 String Acoustic.sfz  Classic Rock Electric.sfz  Finger Picked Acoustic.sfz  Hard Rock Electric.sfz  Jazz Electric.sfz  Nylon Acoustic.sfz  Warm Picked Acoustic.sfz
Piano/: Acoustic Grand Piano.sfz  Bright Grand Piano.sfz  Classic Electric Piano.sfz  ElectricClav.sfz  Jazz Organ.sfz  Mellow Grand Piano.sfz  Rock Organ.sfz  Vintage Electric Piano.sfz
Playable RealDrums/: DK0016.sfz  DK0017.sfz  DK0018.sfz  DK0019.sfz  DK0020.sfz  DK0021.sfz  DK0022.sfz  DK0023.sfz  DK0024.sfz  DK0025.sfz
Playable RealTracks/: SN0081.sfz  SN0082.sfz  SN0085.sfz  SN0096.sfz  SN0096_alt.sfz  SN0097.sfz  SN0097_alt.sfz  SN0098.sfz  SN0098_alt.sfz  SN0314.sfz  SN0314_alt.sfz  SN0340.sfz  SN0340_alt.sfz  SN0342.sfz  SN0342_alt.sfz  SN0343.sfz  SN0343_alt.sfz  SN0346.sfz  SN0347.sfz  SN0351.sfz  SN0351_alt.sfz  SN0353.sfz  SN0353_alt.sfz  SN0355.sfz  SN0356.sfz  SN0363.sfz  SN0365.sfz  SN0366.sfz  SN0366_alt.sfz  SN0376.sfz  SN0382.sfz  SN0387.sfz  SN0387_alt.sfz  SN0391.sfz  SN0395.sfz  SN0396.sfz  SN0396_alt.sfz  SN0398.sfz  SN0398_alt.sfz  SN0408.sfz  (+343 more)
Strings/: Chamber Strings.sfz  Movie Strings.sfz
Synth/: 80sPadSynth.sfz  BrightLeadSynth.sfz  ElectroSixtiesFlutes.sfz  FatBassSynth.sfz  FatPadSynth.sfz  PluckedBassSynth.sfz
apps/dreammaker/: Cargo.toml  LICENSE.txt  README.md
apps/dreammaker/src/: main.rs
crates/common_dsp/: Cargo.toml
crates/common_dsp/src/: biquad.rs  calibration.rs  crossfeed.rs  dynamics.rs  fft_utils.rs  lib.rs  pitch.rs
crates/synth_engine/: Cargo.toml  LICENSE.txt
crates/synth_engine/include/: WarriorSynth.h
crates/synth_engine/src/: lib.rs
include/: GenreEffectsEngine.h  LowLatencyProcessor.h  PresetManager.h  USBAudioDetector.h  WarriorUSBRecorderController.h  WarriorUSBRecorderProcessor.h
plugin_ui_demo/: Cargo.toml
plugin_ui_demo/src/: main.rs
plugins/titan7_mix_master/: COPYRIGHT.txt  Cargo.toml  LICENSE.txt
plugins/titan7_mix_master/src/: lib.rs
plugins/warrior_headphone/: COPYRIGHT.txt  Cargo.toml  LICENSE.txt
plugins/warrior_headphone/src/: lib.rs  main.rs
plugins/warrior_usb/: COPYRIGHT.txt  Cargo.toml  LICENSE.txt
plugins/warrior_usb/src/: lib.rs
plugins/warrior_vocal/: COPYRIGHT.txt  Cargo.toml  LICENSE.txt
plugins/warrior_vocal/src/: lib.rs
src/: GenreEffectsEngine.cpp  LowLatencyProcessor.cpp  PresetManager.cpp  USBAudioDetector_simple.cpp  WarriorUSBRecorderController.cpp  WarriorUSBRecorderProcessor.cpp  factory.cpp
src/WarriorCompressor/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/WarriorDelay/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/WarriorDistortion/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/WarriorReverb/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/common/: DSPUtils.cpp  DSPUtils.h  WarriorLookAndFeel.cpp  WarriorLookAndFeel.h
tests/: test_components.cpp
