[workspace]
members = [
    "crates/common_dsp",
    "crates/synth_engine",
    "plugins/warrior_headphone",
    "plugins/warrior_vocal",
    "plugins/warrior_usb",
    "plugins/titan7_mix_master",
    "apps/dreammaker",
]

[workspace.package]
edition = "2021"
authors = ["Warrior Audio"]
description = "Titan7 Warrior Plug-Ins: Headphone, Vocal Repair, USB Instrument, Mixing & Mastering Suite"

[workspace.dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
realfft = "3"
rand = "0.8"
once_cell = "1"
lazy_static = "1"
thiserror = "1"
anyhow = "1"
atomic_float = "0.1"
num-traits = "0.2"
itertools = "0.12"
