[package]
name = "warrior_headphone"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"

[lib]
name = "warrior_headphone"
crate-type = ["cdylib"]

[[bin]]
name = "warrior_headphone"
required-features = ["standalone"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
common_dsp = { path = "../../crates/common_dsp" }

[features]
default = []
standalone = []

[package.metadata.warrior]
product_name = "Warrior Headphone"
price_usd = 129
currency = "USD"
sku = "WH-01"
