[package]
name = "warrior_vocal"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"

[lib]
name = "warrior_vocal"
crate-type = ["cdylib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
common_dsp = { path = "../../crates/common_dsp" }

[package.metadata.warrior]
product_name = "Warrior Vocal Repair"
price_usd = 149
currency = "USD"
sku = "WV-01"
